aligning fixes

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -31,7 +31,7 @@ body {
 
 .main {
 	display: inline-block;
-	padding-top: 62px;
+	padding-top: 60px;
 	justify-content: center;
 	width: 1200px;
 	align-content: center;
@@ -52,7 +52,6 @@ body {
 	background-color: black;
 	top: 0px;
 	left: 0px;
-
 }
 
 .logo {
@@ -100,12 +99,19 @@ body {
 	background-color: black;
 	width: 1200px;
 	align-items: center;
+	margin: 0px;
 }
 
 .titles h2 {
 	padding: 0px;
+	margin: 10px;
+	margin-bottom: 20px;
 }
 
+.titles h4 {
+	padding: 0px;
+	margin: 10px;
+}
 
 
 
@@ -127,7 +133,7 @@ body {
 	align-items: center;
 	justify-content: flex-start;
 	margin: 0px;
-	padding-top: 40px;
+	padding-top: 65px;
 }
 
 .teapage h2 {
@@ -171,6 +177,7 @@ body {
 	align-items: center;
 	justify-content: center;
 	flex-wrap: wrap;
+	padding-bottom: 40px;
 }  
 
 .article {
@@ -182,6 +189,7 @@ body {
 .article h4 {
 	padding: 0px;
 	margin: 10px;
+	padding-top: 7px;
 }
 
 
@@ -192,28 +200,31 @@ body {
 .locationpage {
 	background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg);
 	width: 1200px;
-	height: 600px;
+	height: 575px;
+	/*justify-content: center;*/
 	align-items: center;
-	justify-content: center;
 	object-fit: cover;
 	display: inline-flex;
 	flex-direction: column;
 }
 
-.locations {
-	display: flex;
-	justify-content: center;
-	align-content: center;
-	top: 50%;
-}
-
 .locationpage h2 {
-	padding-top: 7%;
 	width: 100%;
 	margin: 0px;
 	padding: 0px;
+	padding-top: 80px;
+	padding-bottom: 5px;
 	/*flex-basis: 100%;
 	flex-wrap: wrap; */
+}
+
+.locations {
+	display: inline-flex;
+	justify-content: center;
+	align-content: center;
+	/* vertical-align: middle;
+	top: 50%;
+	left: 50%; */
 }
 
 .location {
@@ -222,7 +233,8 @@ body {
 	margin: 15px 20px;
 	opacity: 1;
 	flex-direction: row;
-	paddnig: 5px 50px;
+	top: 50%; 
+	left: 50%;
 }
 
 .location h3 {
@@ -231,8 +243,9 @@ body {
 }
 
 .location p {
-	line-height: 300%;
+	line-height: 310%;
 	padding: 0px 15px;
+	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
@@ -248,6 +261,10 @@ body {
 	margin: 0px;
 	text-align: center;
 	align-items: center;
+}
+
+.footer h2 {
+	margin: 10px;
 }
 
 .copyright {
